<resources>
    <string name="app_name">OnlineAcademy</string>
    <string name="buy_this_course">BUY THIS COURSE</string>
    <string name="forgot_your_password"><u>Did you forget your password?</u></string>
    <string name="register">Register</string>
    <string name="phone_number">phone number</string>
    <string name="pincode">pincode</string>
    <string name="sign_in">Sign in</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="all_categories">All Categories</string>
    <string name="categories">Categories</string>
    <string name="courses_on_sale">Courses On Sale</string>
    <string name="see_all">See all</string>
    <string name="new_courses">New Courses</string>
    <string name="featured">Featured</string>
    <string name="students">students</string>
    <string name="wrong_number_format">Wrong Number Format</string>
    <string name="wrong_number_format_message">Please, check your phone number. It does not match valid phone number format.</string>
    <string name="ok">OK</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="action_websearch">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="price">Price</string>
    <string name="example_price">0.00 AZN</string>
    <string name="dialog_edit_text_example">Example field</string>
    <string name="dialog_message_top_example">This is an example message. To show instructions depending on actions</string>
    <string name="dialog_message_example">This is an example message. Instead of it proper message will be shown on runtime</string>
    <string name="dialog_button_left">Left Button</string>
    <string name="dialog_button_right">Right Button</string>
    <string name="dialog_title_example">Example title</string>
    <string name="toast_example">This is an example toast message to notify actions.</string>
    <string name="home">Home Page</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="contents">Contents</string>
    <string name="overview">OverView</string>
    <string name="accept_terms">I agree with your <i><b> terms and conditions</b></i>. </string>
    <string name="empty_phone_edit_text">Phone field empty</string>
    <string name="empty_phone_edit_text_message">Please, enter your phone number in order to continue.</string>
    <string name="top_courses_on_development">Top Courses on Development</string>
    <string name="top_courses_on_education">Top Courses on Education</string>
    <string name="download">Download this course</string>
    <string name="dummy_course_about">Ancient influences have helped spawn variant interpretations of the nature of history which have evolved over the centuries and continue to change today. The modern study of history is wide-ranging, and includes the study of specific regions and the study of certain topical or thematical elements of historical investigation. Often history is taught as part of primary and secondary education, and the academic study of history is a major discipline in university studies.All events that are remembered and preserved in some authentic form constitute the historical record.[17] The task of historical discourse is to identify the sources which can most usefully contribute to the production of accurate accounts of past. Therefore, the constitution of the historians archive is a result of circumscribing a more general archive by invalidating the usage of certain texts and documents</string>
    <string name="dummy_course_content">Ancient influences have helped spawn variant interpretations of the nature of history which have evolved over the centuries and continue to change today. The modern study of history is wide-ranging, and includes the study of specific regions and the study of certain topical or thematical elements of historical investigation. Often history is taught as part of primary and secondary education, and the academic study of history is a major discipline in university studies.All events that are remembered and preserved in some authentic form constitute the historical record.[17] The task of historical discourse is to identify the sources which can most usefully contribute to the production of accurate accounts of past. Therefore, the constitution of the historians archive is a result of circumscribing a more general archive by invalidating the usage of certain texts and documents</string>
    <string name="dummy_course_title">CONTENT</string>
    <string-array name="course_english">
        <item>Nouns are naming words. They are words that give us the names for all the things that we come into contact with in our lives. Without them we would not be able to tell the difference between a chair and a couch or hockey and soccer!The more you know about nouns the clearer your communication will be.Nouns name things. As well as naming things we can see, such as people and places, nouns also name things we cant see, such as emotions. Abstract nouns name feelings, concepts and ideas. Abstract nouns describe qualities or states of being. Common nouns are used for general classes of people, places or things.Proper nouns are the names of people, places, organizations, days, months or titles. Collective nouns are used for groups of animals, people or things. Collective nouns are used when referring to a group of animals, people or things. When we say a herd of cattle the collective noun is herd. Using a collective noun can be another way of making a plural. Some examples of collective nouns are committee, class, fleet, flock and litter.</item>
        <item>Verbs name actions. The verb in the example below is the word play. It expresses action.I play cricket every Saturday.Verbs can be changed like nouns and the form they take is determined by who is doing the action and when the action occurred. The following example shows how the form of a verb may change depending on who is doing the action.I play cricket every Saturday.You play cricket every Saturday.She plays cricket every Saturday.He plays cricket every Saturday.We play cricket every Saturday.They play cricket every Saturday.While some verbs show action, others show being or appearance. Examples of verbs showing being or appearance are: be, becomes, seem, were and appear.Examples:My brother is very fit.We were happy yesterday.You appear to be upset.They seem sad.Test your knowledge and try the following verb activity.</item>
        <item>Adjectives are words that tell us something about the quality of nouns, or words that stand in for nouns: pronouns. They modify other words and tell us more about them.Examples of adjectives modifying nouns: nice boss,good friend, lovely dinner Examples of adjectives modifying pronouns:He was funny.She is charming.Adjectives can come in three forms. They not only tell us qualities of nouns, but they also allow us tocompare the qualities of nouns. These three forms are called positive, comparative and superlative. The positive form simply states the quality. The comparative form compares the quality of two things. The superlative form compares the quality of three or more things.Positive - The good surf was worth waiting for.Comparative - The surf yesterday was better than the surf today.Superlative - It is the best surf that I have seen.</item>
    </string-array>
    <string-array name="course_accounting">
        <item>Chapter 1. Introduction to accounting There are three basic reports that you should be familiar with:the cash flow statement the Profit and Loss statement the balance sheet,The Profit and Loss statement The format of the Profit and Loss statement will be influenced by the nature of the firms activities. It should also respond to the needs of those who use it.It will be assumed that the business is a trading firm using the perpetual inventory approach.The Profit and Loss statement for a trading firm falls into two sections:calculation of gross profit (revenue less cost of sales)calculation of net profit (gross profit less other expenses)Classification of terms for the balance sheet. Classification of items into current and non-current sections helps assess liquidity. There are three criteria for separating current from non-current assets: Time - How long before the asset is expected to be converted into cash? Intention - Is it intended to convert the asset into cash in the near future?</item>
        <item>Analyse:accounting information in assessing the performance of a business operated as a sole trader in such matters as profitability and liquidity;debtors using an ageing analysis;the information presented in accounting reports and budgets for a business.Balance: ledger accounts at the end of an accounting period;the disposal of asset account to determine the profit or loss on disposal of assets.Calculate:owners equity (capital) from a given list of assets and liabilities at a particular date;the amount of profit earned from a given set of information relating to a specific period of time.Check:the accuracy of ledger recordings;a bank statement against the cash records of a business.Classify:items into categories of assets, liabilities and owners equity, with revenue and expenses as elements of owners equity;items in Profit and Loss statements to provide information for assessing the performance of different functions or responsibilities.</item>
        <item>Classification is the division of data into classes or categories to enable the more effective provision of information from financial reports. Classification occurs in both records and reports.Classification is designed to produce two outcomes: control, planning.When discussing the reasons for classification ultimately you must come back to planning and control.Records.The special journals are exclusive in the data they contain, for instance, the cash receipts journal only contains cash receipts. Within the journal the different sources of data may also be classified. The cash receipts may be classified according to the source of those receipts, whether they be from cash sales, debtors or other sources.Functional classification, Functional classification refers to the manner in which expenses are grouped in the Profit and Loss statement. The expenses are classified according to the function they perform and usually correspond to the cost centres of the firm.</item>
    </string-array>
</resources>