<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/dialog_title_example"
        android:textColor="#313131"
        android:textSize="17sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#aaa" />

    <TextView
        android:id="@+id/dialog_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/dialog_message_top_example"
        android:textColor="#646464"
        android:textSize="14sp"
        android:visibility="gone" />


    <EditText
        android:id="@+id/dialog_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/dialog_edit_text_example"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/dialog_message_example"
        android:textSize="16sp"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#aaa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_left_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:paddingBottom="15dp"

            android:paddingTop="15dp"
            android:text="@string/dialog_button_left" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/dialog_right_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/dialog_button_right"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
