<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_general_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingTop="100.0dip">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30.0dip"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:src="@drawable/ic_logo" />

    <RelativeLayout
        android:id="@+id/login_containers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_logo"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_sections_container"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sign_in_section_indicator"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:src="@drawable/triangle"
                android:tint="#ffffffff"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/register_section_indicator"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:src="@drawable/triangle"
                android:tint="#ffffffff"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_in_button"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingBottom="25.0dip"
                android:paddingTop="25.0dip"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:textSize="25.0sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/register_button"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingBottom="25.0dip"
                android:paddingTop="25.0dip"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="25.0sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_sections_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_buttons_container"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:padding="20.0dip"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.20000005dip"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:background="#ffaaaaaa" />

            <EditText
                android:id="@+id/pincode_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/pincode"
                android:padding="20.0dip"
                android:singleLine="true"
                android:visibility="visible" />



            <CheckBox
                android:id="@+id/accept_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:paddingBottom="20.0dip"
                android:paddingLeft="5.0dip"
                android:paddingTop="20.0dip"
                android:text="@string/accept_terms"
                android:textSize="15.0sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/login_forgot_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:paddingTop="10.0dip"
                android:paddingLeft="15.0dip"
                android:text="@string/forgot_your_password"
                android:textColor="@color/textColorPrimary"
                android:textSize="15.0sp"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/login_signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:background="@drawable/button_blue"
            android:padding="15.0dip"
            android:text="@string/register"
            android:textColor="#ffffffff"
            android:textStyle="normal" />
    </RelativeLayout>
</RelativeLayout>